--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
-title: Karl's homepage
+title: Karl's Page
 logo: /assets/img/logo.jpeg
-description: Bookmark this to keep an eye on my project updates!
-show_downloads: true
-google_analytics:
+description: My personal page
+#show_downloads: true
+#google_analytics:
